[workspace]
members = ["crates/ide", "crates/lsp", "crates/syntax"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
drop_bomb = "0.1.5"
ecow = "0.2.0"
futures = "0.3.30"
id-arena = "2.2.1"
indexmap = "2.2.6"
insta = "1.31.0"
iset = "0.3.1"
ropey = "1.6.1"
rowan = "0.15.13"
salsa = "0.16.1"
text-size = "1.1.1"
thiserror = "2.0.11"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unscanny = "0.1.0"
