[workspace]
members = ["crates/ide", "crates/lsp", "crates/syntax", "crates/tblgen-rs-alt"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
dashmap = "6.1.0"
ecow = "0.2.0"
futures = "0.3.30"
id-arena = "2.2.1"
indexmap = "2.2.6"
insta = "1.31.0"
iset = "0.3.1"
ropey = "1.6.1"
rowan = "0.16.0"
salsa = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
text-size = "1.1.1"
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unscanny = "0.1.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
debug = true
inherits = "release"
