[package]
name = "tablegen-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
ecow = "0.1.2"
id-arena = "2.2.1"
iset = "0.2.2"
ropey = "1.6.0"
tablegen-parser = { path = "../tablegen-parser" }
tower-lsp = "0.20.0"
