[package]
name = "tablegen-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
ropey = "1.6.0"
tablegen-parser = { path = "../tablegen-parser" }
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
