[package]
name = "tablegen-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tablegen-analyzer = { path = "../tablegen-analyzer" }
tablegen-parser = { path = "../tablegen-parser" }
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
