[package]
name = "ide"
version.workspace = true
edition.workspace = true

[dependencies]
syntax = { path = "../syntax" }
ecow.workspace = true
id-arena.workspace = true
indexmap.workspace = true
ropey.workspace = true
salsa.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
insta.workspace = true
iset.workspace = true
