[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ide = { path = "../ide" }
text-size = "1.1.1"
