[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[dependencies]
ide = { path = "../ide" }
async-lsp.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
text-size.workspace = true
