[package]
name = "syntax"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb.workspace = true
ecow.workspace = true
insta.workspace = true
rowan.workspace = true
unscanny.workspace = true
